Added team management logic and refactored validators